<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/main_view" android:tag="layout/activity_about_0" android:background="@color/colorAboutBg" android:paddingTop="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/Theme.AppCompat.DayNight" android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.Design.AppBarLayout">
        <android.support.design.widget.CollapsingToolbarLayout android:id="@id/collapsing_app_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap" style="@style/CollapsingToolbar">
            <FrameLayout android:layout_gravity="bottom|center" android:orientation="vertical" android:id="@id/title_frame" android:layout_width="wrap_content" android:layout_height="280.0dip" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center_horizontal" android:id="@id/app_icon" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginBottom="8.0dip" android:src="@mipmap/goodlock_icon" />
                    <TextView android:textSize="38.0dip" android:textColor="@color/colorAboutTitle" android:layout_gravity="center_horizontal" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="Good Lock" android:fontFamily="sans-serif-light" />
                    <TextView android:textSize="12.0dip" android:textStyle="normal" android:textColor="@color/colorAboutComment" android:layout_gravity="center_horizontal" android:id="@id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="V 4.1.01.15" android:fontFamily="sans-serif" />
                    <TextView android:textSize="12.0dip" android:textStyle="normal" android:textColor="@color/colorAboutComment" android:layout_gravity="center_horizontal" android:id="@id/osl" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_source_license" android:fontFamily="sans-serif" />
                    <TextView android:textSize="12.0dip" android:textStyle="normal" android:textColor="@color/colorAboutComment" android:layout_gravity="center_horizontal" android:id="@id/terms" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_short" android:fontFamily="sans-serif" />
                </LinearLayout>
            </FrameLayout>
            <android.support.v7.widget.Toolbar android:theme="@style/Appbar.Overflow" android:layout_gravity="bottom" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_collapseMode="pin">
                <LinearLayout android:orientation="horizontal" android:id="@id/collapsed_title_frame" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center_vertical" android:id="@id/collapsed_app_icon" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginRight="8.0dip" android:src="@mipmap/goodlock_icon" />
                    <TextView android:textSize="18.0dip" android:textColor="@color/colorAboutTitle" android:layout_gravity="center_vertical" android:id="@id/collapsed_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Good Lock" android:singleLine="true" android:fontFamily="sans-serif" />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/sesl_appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:id="@id/dev_members_frame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="24.0dip">
            <TextView android:textSize="12.0dip" android:textColor="@color/colorAboutComment" android:layout_gravity="center_horizontal" android:id="@id/thanks_to" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:textAlignment="center" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>